--- a/LoginForm/src/App.css
+++ b/LoginForm/src/App.css
@@ -39,8 +39,8 @@ button:active {
 }
 form{
   
-  margin-left: 700px;
-  margin-right: 700px;
+  margin-left: 200px;
+  margin-right: 200px;
 }
 @media only screen and (max-width: 600px) {
   body {
@@ -51,3 +51,7 @@ form{
 
   }
 }
+.admin-button {
+ width: 100px;
+}
+
